# kanbrio

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  DESIGN.md  DOLT_REMOTE.md  GEMINI.md  Makefile  README.md  TEST_PR.md  THIRD_PARTY_NOTICES  docker-compose-test.yml  docker-compose.override.yml  docker-compose.yml  lint_output.txt  manifest  package-lock.json  package.json  review_report.md
.gemini/: agents
apps/api/: Cargo.toml  Dockerfile  deny.toml
apps/api/.sqlx/: README.md  query-006e15254be4b2aff29d59c2a1370338787aeed7aae40ff68bf6caaa149b4d23.json  query-029322b50ab26745b34059ebfedad71f60fbf39da8808b1962f0554d39700cff.json  query-03832045f90be58394915ff5f8c3bfebcdad76825e5d11ba6df9504db1d3d103.json  query-0ac18ebbd7606ebf87d41bd223846adafff231f1aa4c8add2be5d61838257baf.json  query-0cbba0ad78a8daca122e79a67809b4d9aee1ef6d588033e57da6daa60449e320.json  query-0e05e5d78fe1cc539d0aa17447bdd37f78c62cb13244607dfcc421a723208572.json  query-10a9df763e4da4212ffa130b1f8b1e9330f74fccd83a38cf077593470c27dce9.json  query-114de86ffa440b3689f16a6c14af007105790c55ba9aadba012c2e81be5cb673.json  query-14768b625dffcf9b1e8c4b57b5987cc8e8dcf063d9d07c4cc3bf83af698b420d.json  query-199a31e915227fd04727a63ad71ac1fe7bddc74001b93991f3c2997f6c993278.json  query-1b3c77c48300f0dfbc5cb501fb50acd82022d13211e13b573d0515d976f5afb8.json  query-1bae764eb1e158255208603414b302c02c5ff0bc83f3ca98373873bfd798c875.json  query-1dae6416e1f48ddb2b340ae3d15307c9821da0cd430cabf126494e9f7e167711.json  query-23234974586f3978c949b318d39950ea5dfebd33116199648488972bb9d7239f.json  (+58 more)
(+175 files in other folders)
